--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style></style>
 </head>
 <body>
     <header>
@@ -25,6 +26,18 @@
     <section>
         <h3>le gustan los gatitos como estos:</h3>
         <img src="https://images.pexels.com/photos/13279319/pexels-photo-13279319.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="gatitos calicos">
+    </section>
+    <section>
+        <form action="">
+            <label for="name">nombre del gatito:</label>
+            <input type="text" id="name" placeholder="PON EL NOMBRE AQUI">
+        </form>
+        <p>
+            si te interesan los gatitos puedes ir a 
+            <a href="https://www.pexels.com/es-es/buscar/gatitos/"> este enlace </a>
+            y encontraras muchos gaticos
+        
+        </p>
     </section>
 </body>
 </html>
